# B-YEP-400-zappy

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  multiple_ai.sh
zserver/: CMakeLists.txt  Makefile
zserver/include/: cli.h  common.h  fd_infos.h  graphical_protocol.h  network_client.h  network_client_pool.h  network_client_user_map.h  network_manager.h  network_server.h  network_user_base.h  zappy_world.h  zcommand_proto.h  zcommands.h  zitem.h  zposition.h  zserver.h  zworld.h
zserver/lib/circular_buffer/: CMakeLists.txt  Makefile
zserver/lib/circular_buffer/include/: circular_buffer.h
zserver/lib/circular_buffer/sources/: circular_buffer_clear.c  circular_buffer_flush.c  circular_buffer_read.c  circular_buffer_read_bytes.c  circular_buffer_write.c
zserver/lib/circular_buffer/tests/: Makefile
zserver/lib/containers/: CMakeLists.txt  Makefile
zserver/lib/containers/include/: generic_list.h  map.h  queue.h  stack.h
zserver/lib/containers/sources/: generic_list_access.c  generic_list_creation.c  generic_list_deletion.c  generic_list_informations.c  generic_list_node_deletion.c  map_access.c  map_informations.c  map_internals.c  map_modifications.c  queue_access.c  queue_informations.c  queue_modifications.c  stack_access.c  stack_informations.c  stack_modifications.c
zserver/sources/: base64.c  global.c  main.c  utils.c  websocket.c
zserver/sources/cli/: clear_str.c  handle_stdin.c  prompt_and_welcome.c
zserver/sources/cli/commands/: case_sensitive.c  cinfo.c  clear.c  drop.c  endgame.c  exit.c  help.c  kill.c  nscap.c  (+4 more)
zserver/sources/gameplay/: arguments.c  connection.c  end_game.c  map.c  on_extract_connected.c  on_nm_event.c  process_command.c  process_food.c  remove_signals.c  resources.c  server_running.c  starve.c  teams.c  zappy.c  zappy_run.c
zserver/sources/graphical_protocol/: find_trantorian_by.c  graphical_user.c  handle_graphical_user_cmd.c  update_ws_server.c
zserver/sources/network/: global.c  network_client_compare.c  network_client_flush.c  network_client_pool_getters.c  network_client_pool_infos.c  network_client_pool_manage.c  network_client_user_map_getters.c  network_client_user_map_manage.c  network_client_user_map_without_users.c  network_manager_accept_connections.c  network_manager_alloc.c  network_manager_disconnect.c  network_manager_extract.c  network_manager_servers_handle.c  network_manager_sync_buffer.c  network_manager_timeout_client.c  network_manager_update.c  network_server_accept_connections.c  network_server_alloc.c  network_server_disconnect.c  network_server_extract.c  network_server_sync_buffer.c  network_server_update.c
zserver/sources/websockets/: websocket.c  websocket_header_end.c  websocket_header_start.c  websocket_send.c  websocket_set_connection.c  websocket_set_key.c  websocket_set_upgrade.c
zserver/tests/sources/: tests_zappy_server.c
(+98 files in other folders)
